Fix user profile overflowing scrollbar

--- a/src/views/style/UserProfile.scss
+++ b/src/views/style/UserProfile.scss
@@ -104,10 +104,8 @@ $break-small: 500pt;
       }
       .bio {
         font-size: 0.9em;
-        line-height: 1.1em;
         white-space: pre-line;
         max-height: 5.5em;
-        overflow-y: auto;
       }
     }
     .edit {
